--- a/notice_1.0/examples/vanillaJS/index.html
+++ b/notice_1.0/examples/vanillaJS/index.html
@@ -9,7 +9,7 @@
     <title>Login Form</title>
 </head>
 <body>
-    <div id="notice-container" class="bottom-center"></div>
+    <div id="notice-container" class="bottom-center dark"></div>
     <div class="container">
         <input type="email" id="email" placeholder="E-mail">
         <input type="password" id="password" placeholder="Password">
