--- a/tests/HTML+JS/index.html
+++ b/tests/HTML+JS/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/style/notice.css">
+    <link rel="stylesheet" href="./dist/notice.css">
     <title>Document</title>
 </head>
 <body>
     <img src="./rainbow-colorful-background-digital-art-4k-wallpaper-uhdpaper 2.jpg" alt="">
     <button onclick="notice.createNotice('Hello from notice!', 'alert', 'persisted')">Create Notice</button>
-    <script>var exports = {}</script>
-    <script src="../dist/notice.js"></script>
+    <script src="./dist/notice.js"></script>
     <script>
         const notice = new Notice({
             type: 'glass',
